Css mobile firts

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-
+    <section id="login">
+        <p>Faça login</p>
+        <div id="imagem">
+            <img src="../imagens/pexels-miggy-rivera-5665104 (1).jpg" alt="Imagem">
+        </div>
+        <div id="formulario">
+            <p>Faça Login</p>
+            <div id="email">
+                <form action="sla.php" method="get">
+                    <input type="text" name="email" id="email">
+                    <label for="email">Email</label>
+                </form>
+            </div>
+            <div id="senha">
+                <input type="password" name="senha" id="senha">
+                <label for="senha">Senha</label>
+            </div>
+            <div id="entrar">
+                <input type="submit" value="Entrar">
+                <a href="#">esqueci a senha</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
